# CorrelatorAnalyser

./: .gitignore  .pre-commit-config.yaml  ContinuumLimitPerBeta.ipynb  LICENSE  README.md  analyser.py  correlator.py  fit.py  fitModels.py  fitter.py  helper.py  lib_perylene.py  lib_preprocessData.py  main.py  main_perylene.py  mplStyle.py  plotting.py  pyproject.toml  test_doubleExp.py  test_simpleExp.py
correlatoranalyser/: ExpSumFit.py  exp_fit.py  fit.py  fitModels.py  fitter.py  helper.py  model_average.py
correlatoranalyser/plotting/: mplStyle.py  plotting.py
examples/: test_doubleExp.py  test_simpleExp.py
